--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
     <title>Method Madness</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    <script src="player.js"></script>
     <script src="monster.js"></script>
+    <script src="player.js"></script>
     <script src="main.js"></script>
 </head>
 <body>
     <section id="app">
-
+        <div id="player-health" class="health-bar">100</div>
+        <div id="player-damage-taken">&nbsp</div>
+        <div id="monster-health" class="health-bar">30</div>
+        <div id="monster-damage-taken">&nbsp</div>
+        <div id="level">Level: <span id="level-number">1</span></div>
+        <button id="fight">Fight</button>
+        <div id="results">Let the battle begin!</div>
     </section>
 </body>
 </html>
