added a new game button that resets everything back to the beginning values and html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div id="monster-damage-taken">&nbsp</div>
         <div id="level">You are level: <span id="level-number">1</span></div>
         <button id="fight">Fight</button>
+        <button id="new-game">New Game</button>
         <div id="results">Let the battle begin!</div>
     </section>
 </body>
